refactor(provider): refactor providers and `WorkspaceManager` as async
- other improvements